tests/baselines/reference/transpile/Generates expected syntactic diagnostics.oldTranspile.errors.txt
file.ts(1,1): error TS1434: Unexpected keyword or identifier.


==== file.ts (1 errors) ====
    a b
    ~
!!! error TS1434: Unexpected keyword or identifier.